# DB

./: .gitignore  DATA_README.md  README.md  pyproject.toml
csv/: demand_1h.csv  demand_5min.csv  fuel_price_hourly.csv  heat_demand_2023Q1.csv  nambu_generation.csv  nambu_plants.csv  namdong_generation.csv  namdong_plants.csv  weather_aws_seongnam.csv  wind_hangyoung.csv  wind_namdong.csv
parquet/: demand_1h.parquet  demand_5min.parquet  demand_weather_1h.parquet  fuel_price_hourly.parquet  heat_demand_2023Q1.parquet  nambu_generation.parquet  nambu_plants.parquet  namdong_generation.parquet  namdong_plants.parquet  weather_aws_seongnam.parquet  wind_hangyoung.parquet  wind_namdong.parquet
scripts/: export_q1_dataset.py  export_to_csv.py
